<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="my_app_name">Camera Http</string>
    <string name="action_settings">Settings</string>
    <string name="zoom">Zoom</string>
    <string name="adjust_zoom">Adjust zoom</string>
    <string name="brightness">Exposure</string>
    <string name="scene_mode">Scene mode</string>
    <string name="scene_modes">Supported scene modes</string>
    <string name="white_balance">White balance</string>
    <string name="white_balances">Supported white balance</string>
    <string name="color_effect">Color effect</string>
    <string name="color_effects">Supported color effects</string>
    <string name="picture_size">Picture size</string>
    <string name="picture_sizes">Picture sizes</string>
    <string name="panel">Location Panel</string>
    <string name="camera_img_btn">control button</string>
    <string name="four_button_http">Http</string>
    <string name="four_button_sms">Sms</string>
    <string name="four_button_mms">Mms</string>
    <string name="cancel">Cancel</string>
    <string name="all_captures">All Captures</string>
    <string name="capture">capture</string>
    <string name="flash">Flash</string>
    <string name="flash_auto">Flash auto</string>
    <string name="flash_on">Flash on</string>
    <string name="flash_off">Flash off</string>
    <string name="send">Send</string>
    <string name="reset_camera">Reset Camera</string>
    <string name="settings">Settings</string>
    <string name="my_preferences">Preferences</string>
    <string name="thumbnail_desc">Thumbnail picture</string>
    <string name="show_left_controls">Left controls</string>
    <string name="periodic_capture">Start periodic capture</string>
    <string name="capturing_photo">Capturing photo…</string>
    <string name="sending_capture_via_http">Sending Capture via http…</string>
    <string name="send_capture_via_http">Send Capture via http?</string>
    <string name="unknown_file_type">Unknown file type!</string>
    <string name="camera_is_busy">Camera is busy!</string>
    <string name="error_switching_photo_video">Error switching photo / video!</string>
    <string name="no_captured_media_file_found">No captured media file found!</string>
    <string name="error_recording_video">Error recording video!</string>
    <string name="unable_to_complete_this_action">Unable to complete this action!</string>
    <string name="error_checking_for_front_camera">Error checking for front camera!</string>
    <string name="reset_camera_settings">Reset camera settings?</string>
    <string name="error_resetting_camera">Error resetting camera!</string>
    <string name="yes">Yes</string>
    <string name="start">Start</string>
    <string name="please_enter_a_positive_integer">Please enter a positive integer!</string>
    <string name="infinite">Infinite</string>
    <string name="error_restoring_thumbnail_icon">Error restoring thumbnail icon!</string>
    <string name="error_saving_capture">Error saving Capture!</string>
    <string name="error_setting_scene_mode">Error setting scene mode!</string>
    <string name="error_setting_white_balance">Error setting White Balance!</string>
    <string name="error_setting_color_effect">Error setting Color Effect!</string>
    <string name="error_setting_picture_size">Error setting picture size!</string>
    <string name="error_updating_video_size">Error updating Video Size!</string>
    <string name="front_camera_is_not_supported">Front camera is not supported</string>
    <string name="error_reversing_camera">Error reversing camera!</string>
    <string name="error_starting_audio_recording">Error starting Audio recording!</string>
    <string name="video_size">Video size</string>
    <string name="no_internet_connection">No Internet connection!</string>
    <string name="unknown_location">Unknown location!</string>
    <string name="delete_selected_capture">Delete selected Capture?</string>
    <string name="capture_deleted">Capture deleted</string>
    <string name="error_deleting_capture">Error deleting Capture!</string>
    <string name="no">No</string>
    <string name="delete_all_captures">Delete all Captures?</string>
    <string name="all_captures_deleted">All Captures deleted</string>
    <string name="error_deleting_captures">Error deleting Captures!</string>
    <string name="no_captures">No Captures</string>
    <string name="send_via_http">Send via HTTP?</string>
    <string name="no_server_response">No server response</string>
    <string name="connection_to_google_play_services_failed">Connection to Google Play Services failed!</string>
    <string name="connection_to_google_play_services_suspended">Connection to Google Play Services suspended!</string>
    <string name="captures">Captures</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="preferences">Preferences</string>
    <string name="show_on_map">Show on map</string>
    <string name="open_in_gallery">Open in Gallery</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete all</string>
    <string name="white_balance_changed_from_to" formatted="false">White balance changed from %s to %s</string>
    <string name="color_effect_changed_from_to" formatted="false">Color effect changed from %s to %s</string>
    <string name="scene_mode_changed_from_to" formatted="false">Scene mode changed from %s to %s</string>
    <string name="periodic_capture_started_with_interval">Periodic capture started, interval: %s sec</string>
    <string name="enter_number_of_captures_or_empty_for_continuous_capture">Enter number of captures. Leave empty for continuous capture</string>
    <string name="error_creating_video_file">Error creating video file</string>
    <string name="error_creating_audio_file">Error creating audio file</string>
</resources>